Changed image naming convention to create shorter names.
Added preliminary iRODS 4.2.5 build (WIP, requires iRODS externals
packages).

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -4,33 +4,41 @@ TAG_NAMESPACE=wsinpg
 
 .PHONY: clean
 
-image_names := ubuntu-12.04-base conda-12.04 conda-irods-12.04
+image_names := ub-12.04-base ub-12.04-conda ub-12.04-conda-irods-4.1 # ub-12.04-conda-irods-4.2
 images := $(addsuffix .$(TAG), $(image_names))
 
 all: $(images)
 
-ubuntu-12.04-base.$(TAG): base/ubuntu/12.04/Dockerfile
+ub-12.04-base.$(TAG): base/ubuntu/12.04/Dockerfile
 	docker build \
 	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
 	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
-	--tag $(TAG_NAMESPACE)/ubuntu-12.04-base:latest \
-	--tag $(TAG_NAMESPACE)/ubuntu-12.04-base:$(TAG) --file $< ./base
+	--tag $(TAG_NAMESPACE)/ub-12.04-base:latest \
+	--tag $(TAG_NAMESPACE)/ub-12.04-base:$(TAG) --file $< ./base
 	touch $@
 
-conda-12.04.$(TAG): conda/ubuntu/12.04/Dockerfile ubuntu-12.04-base.$(TAG)
+ub-12.04-conda.$(TAG): conda/ubuntu/12.04/Dockerfile ub-12.04-base.$(TAG)
 	docker build \
 	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
 	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
-	--tag $(TAG_NAMESPACE)/conda-12.04:latest \
-	--tag $(TAG_NAMESPACE)/conda-12.04:$(TAG) --file $< ./conda
+	--tag $(TAG_NAMESPACE)/ub-12.04-conda:latest \
+	--tag $(TAG_NAMESPACE)/ub-12.04-conda:$(TAG) --file $< ./conda
 	touch $@
 
-conda-irods-12.04.$(TAG): conda/ubuntu/12.04/Dockerfile.irods conda-12.04.$(TAG)
+ub-12.04-conda-irods-4.1.$(TAG): conda/ubuntu/12.04/Dockerfile.irods-4.1.2 ub-12.04-conda.$(TAG)
 	docker build \
 	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
 	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
-	--tag $(TAG_NAMESPACE)/conda-irods-12.04:latest \
-	--tag $(TAG_NAMESPACE)/conda-irods-12.04:$(TAG) --file $< ./conda
+	--tag $(TAG_NAMESPACE)/ub-12.04-conda-irods-4.1:latest \
+	--tag $(TAG_NAMESPACE)/ub-12.04-conda-irods-4.1:$(TAG) --file $< ./conda
+	touch $@
+
+ub-12.04-conda-irods-4.2.$(TAG): conda/ubuntu/12.04/Dockerfile.irods-4.2.5 ub-12.04-conda.$(TAG)
+	docker build \
+	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
+	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
+	--tag $(TAG_NAMESPACE)/ub-12.04-conda-irods-4.2:latest \
+	--tag $(TAG_NAMESPACE)/ub-12.04-conda-irods-4.2:$(TAG) --file $< ./conda
 	touch $@
 
 clean:
