--- a/docker/conda/ubuntu/12.04/Dockerfile.irods-4.1.2
+++ b/docker/conda/ubuntu/12.04/Dockerfile.irods-4.1.2
@@ -1,4 +1,4 @@
-FROM wsinpg/conda-12.04:latest
+FROM wsinpg/ub-12.04-conda:latest
 
 RUN apt-get update && \
     apt-get install -q -y --no-install-recommends \
