Added a vanilla iRODS 4.2.5 server for use in tests.

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -4,7 +4,10 @@ TAG_NAMESPACE=wsinpg
 
 .PHONY: clean
 
-image_names := ub-12.04-base ub-12.04-conda ub-12.04-conda-irods-4.1 # ub-12.04-conda-irods-4.2
+image_names := ub-12.04-base ub-16.04-base
+image_names += ub-12.04-conda ub-12.04-conda-irods-4.1 ub-12.04-conda-irods-4.2
+image_names += ub-16.04-irods-4.2
+
 images := $(addsuffix .$(TAG), $(image_names))
 
 all: $(images)
@@ -15,6 +18,14 @@ ub-12.04-base.$(TAG): base/ubuntu/12.04/Dockerfile
 	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
 	--tag $(TAG_NAMESPACE)/ub-12.04-base:latest \
 	--tag $(TAG_NAMESPACE)/ub-12.04-base:$(TAG) --file $< ./base
+	touch $@
+
+ub-16.04-base.$(TAG): base/ubuntu/16.04/Dockerfile
+	docker build --pull \
+	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
+	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
+	--tag $(TAG_NAMESPACE)/ub-16.04-base:latest \
+	--tag $(TAG_NAMESPACE)/ub-16.04-base:$(TAG) --file $< ./base
 	touch $@
 
 ub-12.04-conda.$(TAG): conda/ubuntu/12.04/Dockerfile ub-12.04-base.$(TAG)
@@ -39,6 +50,14 @@ ub-12.04-conda-irods-4.2.$(TAG): conda/ubuntu/12.04/Dockerfile.irods-4.2.5 ub-12
 	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
 	--tag $(TAG_NAMESPACE)/ub-12.04-conda-irods-4.2:latest \
 	--tag $(TAG_NAMESPACE)/ub-12.04-conda-irods-4.2:$(TAG) --file $< ./conda
+	touch $@
+
+ub-16.04-irods-4.2.$(TAG): irods/ubuntu/16.04/Dockerfile ub-16.04-base.$(TAG)
+	docker build \
+	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
+	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
+	--tag $(TAG_NAMESPACE)/ub-16.04-irods-4.2:latest \
+	--tag $(TAG_NAMESPACE)/ub-16.04-irods-4.2:$(TAG) --file $< ./irods
 	touch $@
 
 clean:
