--- a/docker/conda/ubuntu/12.04/Dockerfile.irods-4.1.2
+++ b/docker/conda/ubuntu/12.04/Dockerfile.irods-4.1.2
@@ -1,3 +1,5 @@
+# This installs Conda and the dependencies of iRODS 4.1.12 in order to
+# build iRODS 4.1.12 with Conda.
 FROM wsinpg/ub-12.04-conda:latest
 
 RUN apt-get update && \
