--- a/docker/conda/ubuntu/12.04/Dockerfile.irods-4.2.5
+++ b/docker/conda/ubuntu/12.04/Dockerfile.irods-4.2.5
@@ -1,3 +1,5 @@
+# This installs Conda with the dependencies of iRODS 4.2.5 in order to
+# build iRODS 4.2.5 with Conda.
 FROM wsinpg/ub-12.04-conda:latest
 
 COPY ./ubuntu/12.04/pkg /opt/docker/conda/pkg
