Add iRODS 4.2.8 Ubuntu 18.04 image
Add Ubuntu 18.04 base gosu image build
Add iRODS 4.2.8 Ubuntu 18.04 image build

Rename iRODS 4.2.7 image from 4.2 to 4.2.7 because even the minor
version is significant; the iRODS API has deprecations between the
minor versions, see https://github.com/wtsi-npg/baton/pull/224

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -6,9 +6,10 @@ DOCKER_ARGS ?= --pull --no-cache # IMPORTANT to get security updates
 
 .PHONY: clean
 
-image_names := ub-12.04-base ub-16.04-base
+image_names := ub-12.04-base ub-16.04-base ub-18.04-base
 image_names += ub-12.04-conda
-image_names += ub-16.04-irods-4.2
+image_names += ub-16.04-irods-4.2.7
+image_names += ub-18.04-irods-4.2.8
 
 images := $(addsuffix .$(TAG), $(image_names))
 
@@ -30,6 +31,14 @@ ub-16.04-base.$(TAG): base/ubuntu/16.04/Dockerfile
 	--tag $(TAG_NAMESPACE)/ub-16.04-base:$(TAG) --file $< ./base
 	touch $@
 
+ub-18.04-base.$(TAG): base/ubuntu/18.04/Dockerfile
+	docker build $(DOCKER_ARGS) \
+	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
+	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
+	--tag $(TAG_NAMESPACE)/ub-18.04-base:latest \
+	--tag $(TAG_NAMESPACE)/ub-18.04-base:$(TAG) --file $< ./base
+	touch $@
+
 ub-12.04-conda.$(TAG): conda/ubuntu/12.04/Dockerfile ub-12.04-base.$(TAG)
 	docker build $(DOCKER_ARGS) \
 	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
@@ -38,12 +47,20 @@ ub-12.04-conda.$(TAG): conda/ubuntu/12.04/Dockerfile ub-12.04-base.$(TAG)
 	--tag $(TAG_NAMESPACE)/ub-12.04-conda:$(TAG) --file $< ./conda
 	touch $@
 
-ub-16.04-irods-4.2.$(TAG): irods/ubuntu/16.04/Dockerfile ub-16.04-base.$(TAG)
+ub-16.04-irods-4.2.7.$(TAG): irods/ubuntu/16.04/Dockerfile ub-16.04-base.$(TAG)
 	docker build $(DOCKER_ARGS) \
 	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
 	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
-	--tag $(TAG_NAMESPACE)/ub-16.04-irods-4.2:latest \
-	--tag $(TAG_NAMESPACE)/ub-16.04-irods-4.2:$(TAG) --file $< ./irods
+	--tag $(TAG_NAMESPACE)/ub-16.04-irods-4.2.7:latest \
+	--tag $(TAG_NAMESPACE)/ub-16.04-irods-4.2.7:$(TAG) --file $< ./irods
+	touch $@
+
+ub-18.04-irods-4.2.8.$(TAG): irods/ubuntu/18.04/Dockerfile ub-18.04-base.$(TAG)
+	docker build $(DOCKER_ARGS) \
+	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
+	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
+	--tag $(TAG_NAMESPACE)/ub-18.04-irods-4.2.8:latest \
+	--tag $(TAG_NAMESPACE)/ub-18.04-irods-4.2.8:$(TAG) --file $< ./irods
 	touch $@
 
 clean:
