Changing docker push location command to use Github repository owner

--- a/.github/workflows/pushing_container_image.yml
+++ b/.github/workflows/pushing_container_image.yml
@@ -24,18 +24,26 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Build
+      
+      - name: lowercase Repo
+        run: |
+            echo "REPO_OWNER=${GITHUB_REPO_OWNER,,}" >>${GITHUB_ENV}
+        env:
+          GITHUB_REPO_OWNER: ${{ github.repository_owner }}
+
+
+      - name: Build
         run: |
             cd docker
-            make 
-      -
-        name: push
-        run: |
+            make REPO_OWNER=${{ env.REPO_OWNER }}
+     
+      - name: push images
+        run: |      
             docker images
-            docker push ghcr.io/wtsi-npg/ub-12.04-base:latest
-            docker push ghcr.io/wtsi-npg/ub-16.04-base:latest
-            docker push ghcr.io/wtsi-npg/ub-18.04-base:latest
-            docker push ghcr.io/wtsi-npg/ub-12.04-conda:latest
-            docker push ghcr.io/wtsi-npg/ub-16.04-irods-4.2.7:latest
-            docker push ghcr.io/wtsi-npg/ub-18.04-irods-4.2.8:latest
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-12.04-base:$GITHUB_SHA
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-16.04-base:$GITHUB_SHA
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-18.04-base:$GITHUB_SHA
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-12.04-conda:$GITHUB_SHA
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-16.04-irods-4.2.7:$GITHUB_SHA
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-18.04-irods-4.2.8:$GITHUB_SHA
+
