Changing tag to human readable form

--- a/.github/workflows/pushing_container_image.yml
+++ b/.github/workflows/pushing_container_image.yml
@@ -40,10 +40,11 @@ jobs:
       - name: push images
         run: |      
             docker images
-            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-12.04-base:$GITHUB_SHA
-            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-16.04-base:$GITHUB_SHA
-            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-18.04-base:$GITHUB_SHA
-            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-12.04-conda:$GITHUB_SHA
-            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-16.04-irods-4.2.7:$GITHUB_SHA
-            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-18.04-irods-4.2.8:$GITHUB_SHA
+            export TAG=$(git describe --always)
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-12.04-base:$TAG
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-16.04-base:$TAG
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-18.04-base:$TAG
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-12.04-conda:$TAG
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-16.04-irods-4.2.7:$TAG
+            docker push ghcr.io/${{ env.REPO_OWNER }}/ub-18.04-irods-4.2.8:$TAG
 
