Remove Ubuntu 12.04 because the apt repository is no longer available

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -6,22 +6,14 @@ DOCKER_ARGS ?= --pull --no-cache # IMPORTANT to get security updates
 
 .PHONY: clean
 
-image_names := ub-12.04-base ub-16.04-base ub-18.04-base
-image_names += ub-12.04-conda
+image_names := ub-16.04-base ub-18.04-base
+image_names += ub-16.04-conda
 image_names += ub-16.04-irods-4.2.7
 image_names += ub-18.04-irods-4.2.8
 
 images := $(addsuffix .$(TAG), $(image_names))
 
 all: $(images)
-
-ub-12.04-base.$(TAG): base/ubuntu/12.04/Dockerfile
-	docker build $(DOCKER_ARGS) \
-	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
-	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
-	--tag $(TAG_NAMESPACE)/ub-12.04-base:latest \
-	--tag $(TAG_NAMESPACE)/ub-12.04-base:$(TAG) --file $< ./base
-	touch $@
 
 ub-16.04-base.$(TAG): base/ubuntu/16.04/Dockerfile
 	docker build $(DOCKER_ARGS) \
@@ -39,12 +31,12 @@ ub-18.04-base.$(TAG): base/ubuntu/18.04/Dockerfile
 	--tag $(TAG_NAMESPACE)/ub-18.04-base:$(TAG) --file $< ./base
 	touch $@
 
-ub-12.04-conda.$(TAG): conda/ubuntu/12.04/Dockerfile ub-12.04-base.$(TAG)
+ub-16.04-conda.$(TAG): conda/ubuntu/16.04/Dockerfile ub-16.04-base.$(TAG)
 	docker build $(DOCKER_ARGS) \
 	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
 	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
-	--tag $(TAG_NAMESPACE)/ub-12.04-conda:latest \
-	--tag $(TAG_NAMESPACE)/ub-12.04-conda:$(TAG) --file $< ./conda
+	--tag $(TAG_NAMESPACE)/ub-16.04-conda:latest \
+	--tag $(TAG_NAMESPACE)/ub-16.04-conda:$(TAG) --file $< ./conda
 	touch $@
 
 ub-16.04-irods-4.2.7.$(TAG): irods/ubuntu/16.04/Dockerfile ub-16.04-base.$(TAG)
