Add CentOS 7 Conda build image
Add CentOS 7 base image.

Add CentOS 7 Conda build image.

Update the Makefile to use a Centos 7 image, rather than an Ubuntu
Xenial image, for Conda builds.

Update README files.

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -11,14 +11,24 @@ DOCKER_ARGS ?= --pull --no-cache # IMPORTANT to get security updates
 .PHONY: clean
 
 image_names := ub-16.04-base ub-18.04-base
-image_names += ub-16.04-conda
 image_names += ub-16.04-irods-4.2.7
 image_names += ub-18.04-irods-4.2.8
 image_names += ub-18.04-irods-4.2.9
 
+image_names += centos-7-base
+image_names += centos-7-conda
+
 images := $(addsuffix .$(TAG), $(image_names))
 
 all: $(images)
+
+centos-7-base.$(TAG): base/centos/7/Dockerfile
+	docker build $(DOCKER_ARGS) \
+	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
+	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
+	--tag $(TAG_NAMESPACE)/centos-7-base:latest \
+	--tag $(TAG_NAMESPACE)/centos-7-base:$(TAG) --file $< ./base
+	touch $@
 
 ub-16.04-base.$(TAG): base/ubuntu/16.04/Dockerfile
 	docker build $(DOCKER_ARGS) \
@@ -36,12 +46,12 @@ ub-18.04-base.$(TAG): base/ubuntu/18.04/Dockerfile
 	--tag $(TAG_NAMESPACE)/ub-18.04-base:$(TAG) --file $< ./base
 	touch $@
 
-ub-16.04-conda.$(TAG): conda/ubuntu/16.04/Dockerfile ub-16.04-base.$(TAG)
+centos-7-conda.$(TAG): conda/centos/7/Dockerfile centos-7-base.$(TAG)
 	docker build $(DOCKER_ARGS) \
 	--label $(LABEL_NAMESPACE).repository=$(shell git remote get-url origin) \
 	--label $(LABEL_NAMESPACE).commit=$(shell git log --pretty=format:'%H' -n 1) \
-	--tag $(TAG_NAMESPACE)/ub-16.04-conda:latest \
-	--tag $(TAG_NAMESPACE)/ub-16.04-conda:$(TAG) --file $< ./conda
+	--tag $(TAG_NAMESPACE)/centos-7-conda:latest \
+	--tag $(TAG_NAMESPACE)/centos-7-conda:$(TAG) --file $< ./conda
 	touch $@
 
 ub-16.04-irods-4.2.7.$(TAG): irods/ubuntu/16.04/Dockerfile ub-16.04-base.$(TAG)
