--- a/docker/irods/ubuntu/16.04/Dockerfile
+++ b/docker/irods/ubuntu/16.04/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /opt/docker/irods
 
 COPY ./scripts/*.sh ./scripts/
 COPY ./config/* ./config/
+COPY ./patches/* ./patches/
 
 RUN apt-get update && \
     apt-get install -q -y --no-install-recommends \
@@ -21,6 +22,7 @@ RUN apt-get update && \
     apt-get install -q -y --no-install-recommends \
     postgresql \
     jq \
+    patch \
     irods-server="$IRODS_VERSION" \
     irods-runtime="$IRODS_VERSION" \
     irods-database-plugin-postgres="$IRODS_VERSION" \
