Apply security updates on each build and update gosu
Update OS packages directly, on every build, rather than relying on
base images to be updated.

Update gosu to version 1.14.

--- a/docker/base/centos/7/Dockerfile
+++ b/docker/base/centos/7/Dockerfile
@@ -1,6 +1,6 @@
 FROM centos:7 as installer
 
-ENV GOSU_VERSION=1.11
+ENV GOSU_VERSION=1.14
 
 COPY ./scripts /opt/docker/base/scripts
 
@@ -11,6 +11,10 @@ RUN GOSU_VERSION=$GOSU_VERSION /opt/docker/base/scripts/install_gosu.sh && \
     chmod +x /opt/docker/base/scripts/docker-entrypoint.sh
 
 FROM centos:7
+
+# CentOS 7 does not support applying only security updates to packages,
+# so we do a global package update instead
+RUN yum -y update
 
 COPY --from=installer /usr/local/bin/gosu /usr/local/bin/gosu
 COPY --from=installer /opt/docker/base/scripts/docker-entrypoint.sh \
