Add samtools with it iRODS plugin to the available iRODS clients

--- a/docker/irods_clients/minideb/bullseye/Dockerfile
+++ b/docker/irods_clients/minideb/bullseye/Dockerfile
@@ -6,7 +6,8 @@ FROM $DOCKER_TAG_PREFIX/md-bullseye-conda:latest as installer
 ADD . /opt/docker/irods_clients
 
 RUN /opt/docker/irods_clients/scripts/install_irods_icommands.sh && \
-    /opt/docker/irods_clients/scripts/install_baton.sh
+    /opt/docker/irods_clients/scripts/install_baton.sh && \
+    /opt/docker/irods_clients/scripts/install_samtools.sh
 
 FROM $DOCKER_TAG_PREFIX/md-bullseye-base:latest
 
