--- a/.github/workflows/push_container_image.yml
+++ b/.github/workflows/push_container_image.yml
@@ -22,15 +22,15 @@ jobs:
         uses: docker/login-action@v1
         with:
             registry: ghcr.io
-            username: ${{ github.actor }}
+            username: ${{ github.repository_owner }}
             password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         run: |
             cd docker
-            make GITHUB_ACTIONS=${{ env.GITHUB_ACTIONS }} GITHUB_ACTOR=${{ github.actor }}
+            make GITHUB_ACTIONS=${GITHUB_ACTIONS} GITHUB_REPOSITORY_OWNER=${{ github.repository_owner }}
 
             docker image prune --force
             docker images
 
-            make push GITHUB_ACTIONS=${{ env.GITHUB_ACTIONS }} GITHUB_ACTOR=${{ github.actor }}
+            make push GITHUB_ACTIONS=${GITHUB_ACTIONS} GITHUB_REPOSITORY_OWNER=${{ github.repository_owner }}
