Bugfix: Force fetch tags to get the correct annotated tag
Workaround for https://github.com/actions/checkout/issues/290

--- a/.github/workflows/push_container_image.yml
+++ b/.github/workflows/push_container_image.yml
@@ -13,6 +13,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Force fetch annotated tags (workaround)
+        # Workaround for https://github.com/actions/checkout/issues/290
+        run: |
+            git fetch --force --tags
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         with:
