Remove unattended-upgrades after building images
Remove unattended-upgrades after most builds. The exception is the
client development image which is for interactive development work,
where security updates should be pulled in.

Remove the debug flag from unattended-upgrades.

--- a/docker/conda/minideb/bullseye/Dockerfile
+++ b/docker/conda/minideb/bullseye/Dockerfile
@@ -57,7 +57,7 @@ ENV LANG=en_GB.UTF-8 \
     rsync \
     vim \
     unattended-upgrades && \
-    unattended-upgrade -d -v && \
+    unattended-upgrade -v && \
     apt-get remove -q -y unattended-upgrades && \
     apt-get autoremove -q -y && \
     apt-get clean -q -y && \
