Change Singularity support to use Docker images
Add installation Makefile for proxy shell scripts to run executables
in Docker containers. Initially, only iRODS clients are supported.

Update the main README.

--- a/singularity/Makefile
+++ b/singularity/Makefile
@@ -1,20 +1,29 @@
-URL=$(patsubst %@,%,$(shell git ls-remote --get-url origin))
-TAG=$(shell git describe)
+TAG=?$(shell git describe --always)
+DOCKER_REGISTRY?=docker.io
+DOCKER_USER?=wsinpg
+DOCKER_PREFIX?=$(DOCKER_REGISTRY)/$(DOCKER_USER)
+DOCKER_IMAGE?=ub-18.04-irods-clients-4.2.11
 
-SINGULARITY_ARGS ?=
+PREFIX?=/usr/local
 
-.PHONY: clean
+.PHONY: clean install
 
-image_names := baton-2.1.0
+clients := iadmin ibun ichksum ichmod icp idbug ienv ierror iexecmd \
+    iexit ifsck iget igroupadmin ihelp iinit ils ilsresc imcoll imeta \
+    imiscsvrinfo imkdir imv ipasswd iphybun iphymv ips iput ipwd iqdel \
+    iqmod iqstat iquest iquota irepl irm irmdir irmtrash irsync irule \
+	iscan isysmeta iticket itrim iuserinfo ixmsg izonereport \
+	baton-chmod baton-do baton-get baton-list baton-metamod baton-metaquery baton-put
 
-images := $(addsuffix .sif, $(image_names))
+all: $(clients)
 
-all: $(images)
+$(clients):
+	for name in "$@" ; do DOCKER_PREFIX=$(DOCKER_PREFIX) DOCKER_IMAGE=$(DOCKER_IMAGE) TAG=$(TAG) EXECUTABLE="$$name" ./scripts/make_wrapper.sh ; done
 
-baton-%.sif: baton/baton-%.def
-	SINGULARITYENV_GIT_URL=$(URL) \
-	SINGULARITYENV_GIT_REF=$(TAG) \
-	singularity build $(SINGULARITY_ARGS) $@ $<
+install: $(clients)
+	install -d $(PREFIX)/bin
+	install $(clients) $(PREFIX)/bin
+	install ./scripts/singularity-run-docker $(PREFIX)/bin
 
 clean:
-	rm -f $(foreach image_name,$(image_names), $(image_name).sif)
+	rm $(clients)
